# graphqxl

./: .gitattributes  .gitignore  404.html  Cargo.toml  LICENSE.md  README.md  clippy.toml  grammar.example.pest  index.html  installation.html  intro.html  print.html  rust-toolchain.toml  searchindex.js  searchindex.json  usage.html
.github/: semver.sh
.github/workflows/: docs.yml  release.yml  tag.yml  test-tag.yml  unit-test.yml
docs/: book.toml
docs/src/: SUMMARY.md  installation.md  intro.md  usage.md
docs/theme/: highlight.js
features/: generics.html  imports.html  inheritance.html  modifiers.html  templates.html
graphqxl_parser/: Cargo.toml
graphqxl_parser/src/: ast_any_value.rs  ast_arguments.rs  ast_block_def.rs  ast_block_field.rs  ast_description.rs  ast_description_variables.rs  ast_directive.rs  ast_directive_def.rs  ast_directive_location.rs  ast_enum.rs  ast_enum_field.rs  ast_expandable_ref.rs  ast_field.rs  ast_function_call.rs  ast_generic.rs  ast_generic_block_def.rs  ast_generic_call.rs  ast_identifier.rs  ast_implements.rs  ast_import.rs  ast_modified_ref.rs  ast_scalar.rs  ast_schema.rs  ast_spec.rs  ast_union.rs  ast_value.rs  ast_value_basic_data.rs  ast_value_basic_type.rs  ast_value_content.rs  ast_value_data.rs  ast_value_type.rs  grammar.pest  lib.rs  parser.rs
graphqxl_parser/test_graphqxl_files/: 1.graphql  1.graphqxl  2.graphqxl  cyclical1.graphqxl  cyclical2.graphqxl  cyclical3.graphqxl  no_duplicated1.graphqxl  no_duplicated2.graphqxl  no_duplicated3.graphqxl
graphqxl_synthesizer/: Cargo.toml
graphqxl_synthesizer/src/: lib.rs  synth_arguments.rs  synth_block_def.rs  synth_block_field.rs  synth_description.rs  synth_directive.rs  synth_directive_def.rs  synth_function_call.rs  synth_identifier.rs  synth_scalar.rs  synth_schema.rs  synth_spec.rs  synth_union.rs  synth_value_data.rs  synth_value_type.rs
graphqxl_transpiler/: Cargo.toml
graphqxl_transpiler/src/: lib.rs  resolve_expandable_ref.rs  resolve_modified_ref.rs  transpile_block_def.rs  transpile_description.rs  transpile_generic_block_def.rs  (+2 more)
graphqxl_validator/: Cargo.toml
src/: apollo_diagnostic_source.rs  main.rs  ok_or_anyhow_err.rs
(+78 files in other folders)
