[package]
name = "graphqxl"
version = "0.11.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [
    "graphqxl_parser",
    "graphqxl_synthesizer",
    "graphqxl_transpiler",
    "graphqxl_validator"
]

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
graphqxl_parser = { path = "graphqxl_parser" }
graphqxl_validator = { path = "graphqxl_validator" }
graphqxl_transpiler = { path = "graphqxl_transpiler" }
graphqxl_synthesizer = { path = "graphqxl_synthesizer" }

