[package]
name = "graphqxl"
version = "0.21.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [
    "graphqxl_parser",
    "graphqxl_synthesizer",
    "graphqxl_transpiler",
]

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
anyhow = "1.0.63"
apollo-compiler = "0.3.0"
graphqxl_parser = { path = "graphqxl_parser" }
graphqxl_transpiler = { path = "graphqxl_transpiler" }
graphqxl_synthesizer = { path = "graphqxl_synthesizer" }

