[package]
name = "graphqxl"
version = "0.38.1"
edition = "2021"
description = "GraphQXL is an extension of the GraphQL language with some additional syntax that allows creating scalable server-side schemas"
categories = ["language", "compilers"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gabotechs/graphqxl"
keywords = ["graphql", "graphqxl", "schemas", "server", "api", "language"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [
    "graphqxl_parser",
    "graphqxl_synthesizer",
    "graphqxl_transpiler",
]

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
anyhow = "1.0.63"
apollo-compiler = "0.3.0"
graphqxl_parser = { path = "graphqxl_parser" }
graphqxl_transpiler = { path = "graphqxl_transpiler" }
graphqxl_synthesizer = { path = "graphqxl_synthesizer" }

[dev-dependencies]
regex = "1.7.0"
